tooling/nargo_cli/tests/snapshots/execution_success/reference_cancelling/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
true
true
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
true
true
